chore: fix findbugs errors